<resources>
    <string name="app_name">PROG7313_Groupwork</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_amount">Enter amount</string>
    <string name="set_your_goal">Set your goal!</string>
    <string name="win_awards">Win Awards</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="trophy">Trophy</string>
    <string name="goal_achieved">Goal achieved!</string>
    <string name="gift_card">Gift Card</string>
    <string name="badge">Badge</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="system_settings">System Settings</string>
    <string name="currency">Currency</string>
    <string name="change_email">Change email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="savings_icon">Savings Icon</string>
    <string name="savings">Savings</string>
    <string name="envelope_with_savings">Envelope with Savings</string>
    <string name="r_5_000_00">R 5 000.00</string>
    <string name="save_money">Save money:</string>
    <string name="amount_saved">Amount saved</string>
    <string name="add">Add</string>
    <string name="progress">Progress</string>
    <string name="this_month_s_saving_progress">This months saving progress:</string>
    <string name="_80">80%</string>
    <string name="a_penny_saved_is_a_npenny_earned">A penny saved is a\npenny earned!</string>
    <string name="r_29_862">R 29 862</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="change_theme">Change Theme Color</string>
    <string name="account_settings">Account Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="welcome_to">welcome to</string>
    <string name="let_s_get_started">lets get started</string>
    <string name="add_category">Add Category</string>
    <string name="total_savings">Total Savings</string>
    <string name="category_prompt">Select Category</string>
    <string name="month_prompt">Select Month</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="hello_xavier_Martin">Hello!Xavier Martin</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="feature_comming_soon">Feature comming soon!</string>
    <string name="save_settings">Save</string>
    <string name="day_prompt">Select a day</string>

    <string-array name="currency_options">
        <item>R (ZAR)</item>
        <item>$ (USD)</item>
        <item>€ (EUR)</item>
        <item>£ (GBP)</item>
    </string-array>

    <string-array name="categories_array">
        <item>Food</item>
        <item>Transport</item>
        <item>Housing</item>
        <item>Healthcare</item>
        <item>Entertainment</item>
        <item>Utilities</item>
    </string-array>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>